add wechat version 8.0.19