@@ -2,226 +2,225 @@ package com.tencent.mm.plugin.emoji.model;
 
 import android.widget.Toast;
 import com.tencent.matrix.trace.core.AppMethodBeat;
-import com.tencent.mm.an.d.c;
-import com.tencent.mm.an.h.a;
-import com.tencent.mm.an.q;
-import com.tencent.mm.an.t;
-import com.tencent.mm.f.c.et;
-import com.tencent.mm.kernel.c;
-import com.tencent.mm.kernel.h;
-import com.tencent.mm.model.bq;
+import com.tencent.mm.am.c.c;
+import com.tencent.mm.am.g.a;
+import com.tencent.mm.am.p;
+import com.tencent.mm.autogen.b.fi;
+import com.tencent.mm.model.br;
 import com.tencent.mm.model.z;
-import com.tencent.mm.modelmulti.o.b;
-import com.tencent.mm.modelmulti.o.e;
+import com.tencent.mm.modelmulti.t.b;
+import com.tencent.mm.modelmulti.t.e;
 import com.tencent.mm.plugin.emoji.a;
-import com.tencent.mm.plugin.emoji.i.h;
-import com.tencent.mm.plugin.emoji.i.b;
+import com.tencent.mm.plugin.emoji.h.h;
 import com.tencent.mm.plugin.messenger.foundation.a.a.i.c;
 import com.tencent.mm.plugin.messenger.foundation.a.n;
-import com.tencent.mm.protocal.protobuf.aji;
-import com.tencent.mm.protocal.protobuf.jr;
+import com.tencent.mm.protocal.protobuf.amn;
+import com.tencent.mm.protocal.protobuf.kn;
 import com.tencent.mm.sdk.platformtools.Log;
 import com.tencent.mm.sdk.platformtools.MMApplicationContext;
 import com.tencent.mm.sdk.platformtools.Util;
-import com.tencent.mm.storage.as;
-import com.tencent.mm.storage.be;
-import com.tencent.mm.storage.bi;
-import com.tencent.mm.storage.bj;
-import com.tencent.mm.storage.bv;
-import com.tencent.mm.storage.ca;
+import com.tencent.mm.storage.au;
+import com.tencent.mm.storage.bg;
+import com.tencent.mm.storage.bk;
+import com.tencent.mm.storage.bl;
+import com.tencent.mm.storage.bx;
+import com.tencent.mm.storage.cc;
 import com.tencent.mm.storage.emotion.EmojiInfo;
 import com.tencent.mm.storage.emotion.e;
 import java.util.LinkedList;
 import java.util.List;
 
 public final class d
-  implements com.tencent.mm.an.i
+  implements com.tencent.mm.am.h
 {
-  private boolean uEa;
-  List<a> uEb;
-  List<String> uEc;
-  private q uEd;
+  private boolean xMr;
+  List<a> xMs;
+  List<String> xMt;
+  private p xMu;
   
   public d()
   {
-    AppMethodBeat.i(257213);
-    this.uEa = false;
-    this.uEb = new LinkedList();
-    this.uEc = new LinkedList();
-    h.aHF().kcd.a(3862, this);
-    h.aHF().kcd.a(697, this);
-    AppMethodBeat.o(257213);
+    AppMethodBeat.i(269871);
+    this.xMr = false;
+    this.xMs = new LinkedList();
+    this.xMt = new LinkedList();
+    com.tencent.mm.kernel.h.baD().mCm.a(3862, this);
+    com.tencent.mm.kernel.h.baD().mCm.a(697, this);
+    AppMethodBeat.o(269871);
   }
   
-  private void JD(int paramInt)
+  private void Ko(int paramInt)
   {
-    AppMethodBeat.i(257226);
-    if (this.uEb.size() <= 0)
+    AppMethodBeat.i(269878);
+    if (this.xMs.size() <= 0)
     {
-      this.uEa = false;
-      AppMethodBeat.o(257226);
+      this.xMr = false;
+      AppMethodBeat.o(269878);
       return;
     }
-    a locala = (a)this.uEb.remove(0);
-    ca localca = ((n)h.ae(n.class)).eSe().Oq(locala.msgId);
-    localca.setStatus(paramInt);
-    ((n)h.ae(n.class)).eSe().a(locala.msgId, localca);
-    if (this.uEb.size() > 0)
+    a locala = (a)this.xMs.remove(0);
+    cc localcc = ((n)com.tencent.mm.kernel.h.ax(n.class)).gaZ().sl(locala.msgId);
+    if (localcc != null)
     {
-      this.uEc.clear();
-      this.uEc.add(((a)this.uEb.get(0)).fxn.field_md5);
-      h.aHF().kcd.a(new com.tencent.mm.plugin.emoji.f.f((LinkedList)this.uEc), 0);
-      AppMethodBeat.o(257226);
+      localcc.setStatus(paramInt);
+      ((n)com.tencent.mm.kernel.h.ax(n.class)).gaZ().a(locala.msgId, localcc);
+    }
+    if (this.xMs.size() > 0)
+    {
+      this.xMt.clear();
+      this.xMt.add(((a)this.xMs.get(0)).hBS.field_md5);
+      com.tencent.mm.kernel.h.baD().mCm.a(new com.tencent.mm.plugin.emoji.e.f((LinkedList)this.xMt), 0);
+      AppMethodBeat.o(269878);
       return;
     }
-    this.uEa = false;
-    AppMethodBeat.o(257226);
+    this.xMr = false;
+    AppMethodBeat.o(269878);
   }
   
-  public static long a(bi parambi, EmojiInfo paramEmojiInfo, h.a parama)
+  public static long a(bk parambk, EmojiInfo paramEmojiInfo, g.a parama)
   {
-    AppMethodBeat.i(257231);
-    Log.i("MicroMsg.emoji.EmojiBypService", "insertEmojiMsg: %s, %s msgSvrId: %s", new Object[] { parambi.md5, paramEmojiInfo.field_md5, Long.valueOf(parambi.fNu) });
+    AppMethodBeat.i(269890);
+    Log.i("MicroMsg.emoji.EmojiBypService", "insertEmojiMsg: %s, %s msgSvrId: %s", new Object[] { parambk.md5, paramEmojiInfo.field_md5, Long.valueOf(parambk.hTh) });
     long l;
-    if (parambi.fNu != 0L)
+    if (parambk.hTh != 0L)
     {
-      localObject = ((n)h.ae(n.class)).eSe().aL(parambi.talker, parambi.fNu);
-      if (((et)localObject).field_msgSvrId == parambi.fNu)
+      localObject = ((n)com.tencent.mm.kernel.h.ax(n.class)).gaZ().aU(parambk.talker, parambk.hTh);
+      if ((localObject != null) && (((fi)localObject).field_msgSvrId == parambk.hTh))
       {
-        l = ((et)localObject).field_msgId;
-        AppMethodBeat.o(257231);
+        l = ((fi)localObject).field_msgId;
+        AppMethodBeat.o(269890);
         return l;
       }
     }
-    Object localObject = ((n)h.ae(n.class)).bbL().RG(parambi.talker);
-    if ((localObject == null) || ((int)((com.tencent.mm.contact.d)localObject).jxt == 0))
+    Object localObject = ((n)com.tencent.mm.kernel.h.ax(n.class)).bzA().JE(parambk.talker);
+    if ((localObject == null) || ((int)((com.tencent.mm.contact.d)localObject).maN == 0))
     {
-      localObject = new as(parambi.talker);
-      ((as)localObject).setType(2);
-      ((n)h.ae(n.class)).bbL().av((as)localObject);
+      localObject = new au(parambk.talker);
+      ((au)localObject).setType(2);
+      ((n)com.tencent.mm.kernel.h.ax(n.class)).bzA().aB((au)localObject);
     }
-    localObject = new ca();
-    ((ca)localObject).setType(47);
-    ((ca)localObject).Jm(parambi.talker);
+    localObject = new cc();
+    ((cc)localObject).setType(47);
+    ((cc)localObject).BS(parambk.talker);
     int i;
     boolean bool;
-    if (z.PD(parambi.mhK))
+    if (z.Iy(parambk.paV))
     {
       i = 1;
-      ((ca)localObject).pJ(i);
-      ((ca)localObject).Jn(paramEmojiInfo.getMd5());
-      ((ca)localObject).EG(parambi.fNu);
-      String str = parambi.mhK;
-      if ((paramEmojiInfo.Qv()) || (paramEmojiInfo.isGif())) {
-        break label449;
+      ((cc)localObject).pI(i);
+      ((cc)localObject).BT(paramEmojiInfo.getMd5());
+      ((cc)localObject).gX(parambk.hTh);
+      String str = parambk.paV;
+      if ((paramEmojiInfo.aqJ()) || (paramEmojiInfo.isGif())) {
+        break label454;
       }
       bool = true;
-      label267:
-      ((ca)localObject).setContent(be.a(str, 0L, bool, paramEmojiInfo.getMd5(), false, parambi.VFz));
-      ((ca)localObject).setCreateTime(bq.z(((et)localObject).field_talker, parambi.createTime));
-      ((ca)localObject).setStatus(3);
-      if (!Util.isNullOrNil(parambi.hxy)) {
-        ((ca)localObject).Ip(parambi.hxy);
+      label272:
+      ((cc)localObject).setContent(bg.a(str, 0L, bool, paramEmojiInfo.getMd5(), false, parambk.adjm));
+      ((cc)localObject).setCreateTime(br.D(((fi)localObject).field_talker, parambk.createTime));
+      ((cc)localObject).setStatus(3);
+      if (!Util.isNullOrNil(parambk.jUr)) {
+        ((cc)localObject).AU(parambk.jUr);
       }
       if (parama != null) {
-        break label455;
+        break label460;
       }
-      i = parambi.hxx;
+      i = parambk.jUq;
       if (i != 0)
       {
-        ((ca)localObject).setFlag(i);
-        if ((((et)localObject).field_msgId == 0L) && (((et)localObject).field_isSend == 0) && ((i & 0x2) != 0)) {
-          ((ca)localObject).setCreateTime(parambi.createTime);
+        ((cc)localObject).setFlag(i);
+        if ((((fi)localObject).field_msgId == 0L) && (((fi)localObject).field_isSend == 0) && ((i & 0x2) != 0)) {
+          ((cc)localObject).setCreateTime(parambk.createTime);
         }
       }
-      if (parambi.mkX != 0) {
-        ((ca)localObject).EI(parambi.mkX);
+      if (parambk.peI != 0) {
+        ((cc)localObject).gZ(parambk.peI);
       }
-      Log.i("MicroMsg.emoji.EmojiBypService", "summerbadcr insertEmojiMsg addMsgInfo is null but flag[%d], msgSeq[%d]", new Object[] { Integer.valueOf(i), Integer.valueOf(parambi.mkX) });
+      Log.i("MicroMsg.emoji.EmojiBypService", "summerbadcr insertEmojiMsg addMsgInfo is null but flag[%d], msgSeq[%d]", new Object[] { Integer.valueOf(i), Integer.valueOf(parambk.peI) });
     }
     for (;;)
     {
-      l = bq.z((ca)localObject);
-      AppMethodBeat.o(257231);
+      l = br.B((cc)localObject);
+      AppMethodBeat.o(269890);
       return l;
       i = 0;
       break;
-      label449:
+      label454:
       bool = false;
-      break label267;
-      label455:
-      bq.a((ca)localObject, parama);
+      break label272;
+      label460:
+      br.a((cc)localObject, parama);
     }
   }
   
-  public static EmojiInfo a(bi parambi)
+  public static EmojiInfo a(bk parambk)
   {
-    AppMethodBeat.i(257228);
-    Log.i("MicroMsg.emoji.EmojiBypService", "createEmojiInfo: %s", new Object[] { parambi.md5 });
+    AppMethodBeat.i(269882);
+    Log.i("MicroMsg.emoji.EmojiBypService", "createEmojiInfo: %s", new Object[] { parambk.md5 });
     EmojiInfo localEmojiInfo = new EmojiInfo();
-    b.b(parambi, localEmojiInfo);
+    com.tencent.mm.plugin.emoji.g.d.b(parambk, localEmojiInfo);
     localEmojiInfo.field_temp = 1;
-    localEmojiInfo.field_state = EmojiInfo.ZuH;
-    localEmojiInfo.field_catalog = EmojiInfo.YCx;
-    p.getEmojiStorageMgr().VFH.K(localEmojiInfo);
-    AppMethodBeat.o(257228);
+    localEmojiInfo.field_state = EmojiInfo.aklW;
+    localEmojiInfo.field_catalog = EmojiInfo.aklG;
+    s.getEmojiStorageMgr().adju.K(localEmojiInfo);
+    AppMethodBeat.o(269882);
     return localEmojiInfo;
   }
   
-  public static void b(bi parambi)
+  public static void b(bk parambk)
   {
-    AppMethodBeat.i(257232);
-    if (parambi == null)
+    AppMethodBeat.i(269896);
+    if (parambk == null)
     {
-      AppMethodBeat.o(257232);
+      AppMethodBeat.o(269896);
       return;
     }
-    ((n)h.ae(n.class)).eSe().a(new i.c(parambi.talker, "update", null));
-    AppMethodBeat.o(257232);
+    ((n)com.tencent.mm.kernel.h.ax(n.class)).gaZ().a(new i.c(parambk.talker, "update", null));
+    AppMethodBeat.o(269896);
   }
   
-  public final void b(String paramString, EmojiInfo paramEmojiInfo, ca paramca)
+  public final void b(String paramString, EmojiInfo paramEmojiInfo, cc paramcc)
   {
-    AppMethodBeat.i(257218);
+    AppMethodBeat.i(269903);
     if ((Util.isNullOrNil(paramString)) || (paramEmojiInfo == null))
     {
-      AppMethodBeat.o(257218);
+      AppMethodBeat.o(269903);
       return;
     }
     long l2 = System.currentTimeMillis();
     boolean bool1 = false;
-    if (b.x(paramEmojiInfo))
+    if (com.tencent.mm.plugin.emoji.g.d.x(paramEmojiInfo))
     {
-      bool1 = p.cUS().auz(paramEmojiInfo.field_groupId);
+      bool1 = s.dAp().aoy(paramEmojiInfo.field_groupId);
       Log.i("MicroMsg.emoji.EmojiBypService", "isNeedShowRewardTip:%b", new Object[] { Boolean.valueOf(bool1) });
     }
     boolean bool2;
     long l1;
     for (;;)
     {
-      if (paramca == null)
+      if (paramcc == null)
       {
-        paramca = new ca();
+        paramcc = new cc();
         if ((paramEmojiInfo.field_type > 3) || (paramEmojiInfo.field_type <= 0))
         {
-          Toast.makeText(MMApplicationContext.getContext(), i.h.emoji_send_fail_forbidden, 0).show();
+          Toast.makeText(MMApplicationContext.getContext(), h.h.emoji_send_fail_forbidden, 0).show();
           Log.i("MicroMsg.emoji.EmojiBypService", "gamelife fobidden image: wrong format: emoji Type:%d", new Object[] { Integer.valueOf(paramEmojiInfo.field_type) });
-          AppMethodBeat.o(257218);
+          AppMethodBeat.o(269903);
           return;
-          p.cUS().cUB();
+          s.dAp().dzI();
         }
         else
         {
-          paramca.setType(47);
-          paramca.Jm(paramString);
-          paramca.pJ(1);
-          if ((!paramEmojiInfo.Qv()) && (!paramEmojiInfo.isGif()))
+          paramcc.setType(47);
+          paramcc.BS(paramString);
+          paramcc.pI(1);
+          if ((!paramEmojiInfo.aqJ()) && (!paramEmojiInfo.isGif()))
           {
             bool2 = true;
-            paramca.setContent(be.a("", l2, bool2, paramEmojiInfo.getMd5(), bool1, ""));
-            paramca.Jn(paramEmojiInfo.getMd5());
-            paramca.setCreateTime(bq.RP(paramca.field_talker));
-            l1 = ((n)h.ae(n.class)).eSe().aM(paramca);
+            paramcc.setContent(bg.a("", l2, bool2, paramEmojiInfo.getMd5(), bool1, ""));
+            paramcc.BT(paramEmojiInfo.getMd5());
+            paramcc.setCreateTime(br.JN(paramcc.field_talker));
+            l1 = ((n)com.tencent.mm.kernel.h.ax(n.class)).gaZ().ba(paramcc);
           }
         }
       }
@@ -229,147 +228,147 @@ public final class d
     for (;;)
     {
       Log.i("MicroMsg.emoji.EmojiBypService", "add Emoji: msgId = %s, md5 %s, len %s", new Object[] { Long.valueOf(l1), paramEmojiInfo.getMd5(), Integer.valueOf(paramEmojiInfo.field_size) });
-      this.uEb.add(new a(l1, paramString, paramEmojiInfo, String.valueOf(l2)));
-      if ((this.uEa) && (this.uEb.size() != 1)) {
+      this.xMs.add(new a(l1, paramString, paramEmojiInfo, String.valueOf(l2)));
+      if ((this.xMr) && (this.xMs.size() != 1)) {
         break label502;
       }
-      this.uEa = true;
-      if ((paramEmojiInfo.field_catalog != EmojiInfo.YCC) && (paramEmojiInfo.field_catalog != EmojiInfo.YCB)) {
+      this.xMr = true;
+      if ((paramEmojiInfo.field_catalog != EmojiInfo.aklL) && (paramEmojiInfo.field_catalog != EmojiInfo.aklK)) {
         break label439;
       }
-      cUD();
-      AppMethodBeat.o(257218);
+      dzK();
+      AppMethodBeat.o(269903);
       return;
       bool2 = false;
       break;
-      l1 = paramca.field_msgId;
-      be localbe = be.bwQ(paramca.field_content);
-      if (localbe.time == 0L)
+      l1 = paramcc.field_msgId;
+      bg localbg = bg.byj(paramcc.field_content);
+      if (localbg.time == 0L)
       {
-        paramca.setStatus(5);
-        ((n)h.ae(n.class)).eSe().a(l1, paramca);
-        AppMethodBeat.o(257218);
+        paramcc.setStatus(5);
+        ((n)com.tencent.mm.kernel.h.ax(n.class)).gaZ().a(l1, paramcc);
+        AppMethodBeat.o(269903);
         return;
       }
-      l2 = localbe.time;
+      l2 = localbg.time;
     }
     label439:
-    this.uEc.clear();
-    this.uEc.add(((a)this.uEb.get(0)).fxn.field_md5);
-    h.aHF().kcd.a(new com.tencent.mm.plugin.emoji.f.f((LinkedList)this.uEc), 0);
+    this.xMt.clear();
+    this.xMt.add(((a)this.xMs.get(0)).hBS.field_md5);
+    com.tencent.mm.kernel.h.baD().mCm.a(new com.tencent.mm.plugin.emoji.e.f((LinkedList)this.xMt), 0);
     label502:
-    AppMethodBeat.o(257218);
+    AppMethodBeat.o(269903);
   }
   
-  public final void cUD()
+  public final void dzK()
   {
-    AppMethodBeat.i(257220);
-    if (this.uEb.isEmpty())
+    AppMethodBeat.i(269906);
+    if (this.xMs.isEmpty())
     {
       Log.e("MicroMsg.emoji.EmojiBypService", "no emoji to upload");
-      AppMethodBeat.o(257220);
+      AppMethodBeat.o(269906);
       return;
     }
-    Object localObject2 = (a)this.uEb.get(0);
-    Object localObject1 = ((a)localObject2).fCl;
-    EmojiInfo localEmojiInfo = ((a)localObject2).fxn;
+    Object localObject2 = (a)this.xMs.get(0);
+    Object localObject1 = ((a)localObject2).hHa;
+    EmojiInfo localEmojiInfo = ((a)localObject2).hBS;
     long l = ((a)localObject2).msgId;
-    localObject2 = ((a)localObject2).fCM;
-    a locala = a.cTq();
-    locala.ilo = String.valueOf(localObject2);
-    locala.jHh = localEmojiInfo;
+    localObject2 = ((a)localObject2).hHB;
+    a locala = a.dxL();
+    locala.kLn = String.valueOf(localObject2);
+    locala.mgK = localEmojiInfo;
     locala.toUser = ((String)localObject1);
     locala.msgId = Long.valueOf(l).longValue();
-    localObject1 = locala.bnl();
-    this.uEd = ((o.b)localObject1).lUi;
-    ((o.b)localObject1).aEv();
-    AppMethodBeat.o(257220);
+    localObject1 = locala.bKW();
+    this.xMu = ((t.b)localObject1).oNb;
+    ((t.b)localObject1).aXz();
+    AppMethodBeat.o(269906);
   }
   
-  public final void onSceneEnd(int paramInt1, int paramInt2, String paramString, q paramq)
+  public final void onSceneEnd(int paramInt1, int paramInt2, String paramString, p paramp)
   {
     int i = 2;
-    AppMethodBeat.i(257224);
+    AppMethodBeat.i(269910);
     Log.i("MicroMsg.emoji.EmojiBypService", "errType %d,errCode %d,errMsg %s", new Object[] { Integer.valueOf(paramInt1), Integer.valueOf(paramInt2), paramString });
-    if (((paramq instanceof com.tencent.mm.plugin.emoji.f.f)) && (!this.uEb.isEmpty()))
+    if (((paramp instanceof com.tencent.mm.plugin.emoji.e.f)) && (!this.xMs.isEmpty()))
     {
       if ((paramInt1 != 0) || (paramInt2 != 0))
       {
         Log.e("MicroMsg.emoji.EmojiBypService", "handleDownloadResult errType:%d, errCode:%d", new Object[] { Integer.valueOf(paramInt1), Integer.valueOf(paramInt2) });
-        JD(5);
-        AppMethodBeat.o(257224);
+        Ko(5);
+        AppMethodBeat.o(269910);
         return;
       }
-      paramString = (com.tencent.mm.plugin.emoji.f.f)paramq;
+      paramString = (com.tencent.mm.plugin.emoji.e.f)paramp;
       if (paramString.rr == null) {}
-      for (paramString = null; !paramString.RPm.isEmpty(); paramString = (jr)d.c.b(paramString.rr.lBS))
+      for (paramString = null; !paramString.YMz.isEmpty(); paramString = (kn)c.c.b(paramString.rr.otC))
       {
-        paramString = (aji)paramString.RPm.getFirst();
-        if ((!paramString.Md5.equals(this.uEc.get(0))) || (paramString.Url == null)) {
+        paramString = (amn)paramString.YMz.getFirst();
+        if ((!paramString.Md5.equals(this.xMt.get(0))) || (paramString.Url == null)) {
           break label204;
         }
-        cUD();
-        AppMethodBeat.o(257224);
+        dzK();
+        AppMethodBeat.o(269910);
         return;
       }
       Log.e("MicroMsg.emoji.EmojiBypService", "handleDownloadResult: BatchEmojiDownLoadResponse resp EmojiList empty ");
       label204:
-      if (this.uEb.isEmpty())
+      if (this.xMs.isEmpty())
       {
         Log.e("MicroMsg.emoji.EmojiBypService", "no emoji to upload");
-        AppMethodBeat.o(257224);
+        AppMethodBeat.o(269910);
         return;
       }
-      new com.tencent.mm.emoji.d.f(((a)this.uEb.get(0)).fxn, false, new com.tencent.mm.emoji.d.d.a()
+      new com.tencent.mm.emoji.e.f(((a)this.xMs.get(0)).hBS, false, new com.tencent.mm.emoji.e.d.a()
       {
-        public final void B(int paramAnonymousInt, String paramAnonymousString)
+        public final void onResult(int paramAnonymousInt, String paramAnonymousString)
         {
-          AppMethodBeat.i(258323);
+          AppMethodBeat.i(269902);
           if (paramAnonymousInt == 0)
           {
-            d.this.cUD();
-            AppMethodBeat.o(258323);
+            d.this.dzK();
+            AppMethodBeat.o(269902);
             return;
           }
           d.a(d.this);
           Log.e("MicroMsg.emoji.EmojiBypService", "uploadCDN error");
-          AppMethodBeat.o(258323);
+          AppMethodBeat.o(269902);
         }
       });
-      AppMethodBeat.o(257224);
+      AppMethodBeat.o(269910);
       return;
     }
-    if ((this.uEd != null) && (this.uEd.getClass().isInstance(paramq)))
+    if ((this.xMu != null) && (this.xMu.getClass().isInstance(paramp)))
     {
       if ((paramInt1 != 0) || (paramInt2 != 0))
       {
         Log.e("MicroMsg.emoji.EmojiBypService", "handleBypSendResult errType:%d, errCode:%d", new Object[] { Integer.valueOf(paramInt1), Integer.valueOf(paramInt2) });
         i = 5;
       }
-      JD(i);
+      Ko(i);
     }
-    AppMethodBeat.o(257224);
+    AppMethodBeat.o(269910);
   }
   
   final class a
   {
-    String fCM;
-    String fCl;
-    EmojiInfo fxn;
+    EmojiInfo hBS;
+    String hHB;
+    String hHa;
     long msgId;
     
     public a(long paramLong, String paramString1, EmojiInfo paramEmojiInfo, String paramString2)
     {
       this.msgId = paramLong;
-      this.fCl = paramString1;
-      this.fxn = paramEmojiInfo;
-      this.fCM = paramString2;
+      this.hHa = paramString1;
+      this.hBS = paramEmojiInfo;
+      this.hHB = paramString2;
     }
   }
 }
 
 
-/* Location:           L:\local\mybackup\temp\qq_apk\com.tencent.mm\classes4.jar
+/* Location:           L:\local\mybackup\temp\qq_apk\com.tencent.mm\classes6.jar
  * Qualified Name:     com.tencent.mm.plugin.emoji.model.d
  * JD-Core Version:    0.7.0.1
  */
